--- a/trunk/plugins/AS3Plugin/scripts/vektrix_AS3Plugin.vcproj
+++ b/trunk/plugins/AS3Plugin/scripts/vektrix_AS3Plugin.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;..\..\..\dependencies\include\caspin;..\..\..\dependencies\include\caspin\tamarin\core;..\..\..\dependencies\include\caspin\tamarin\vmpi;..\..\..\dependencies\include\caspin\tamarin\shell;..\..\..\dependencies\include\caspin\tamarin\platform;..\..\..\dependencies\include\caspin\tamarin\mmgc;..\..\..\dependencies\include\caspin\tamarin\eval;..\..\..\dependencies\include\caspin\tamarin\extensions"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_AS3PLUGIN_EXPORTS;CSP_USE_RUNTIME_DEBUGGER"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;..\..\..\dependencies\include\caspin;..\..\..\dependencies\include\caspin\tamarin\core;..\..\..\dependencies\include\caspin\tamarin\vmpi;..\..\..\dependencies\include\caspin\tamarin\shell;..\..\..\dependencies\include\caspin\tamarin\platform;..\..\..\dependencies\include\caspin\tamarin\mmgc;..\..\..\dependencies\include\caspin\tamarin\eval;..\..\..\dependencies\include\caspin\tamarin\extensions"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_AS3PLUGIN_EXPORTS;CSP_USE_RUNTIME_DEBUGGER"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -201,7 +201,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;..\..\..\dependencies\include\caspin;..\..\..\dependencies\include\caspin\tamarin\core;..\..\..\dependencies\include\caspin\tamarin\vmpi;..\..\..\dependencies\include\caspin\tamarin\shell;..\..\..\dependencies\include\caspin\tamarin\platform;..\..\..\dependencies\include\caspin\tamarin\mmgc;..\..\..\dependencies\include\caspin\tamarin\eval;..\..\..\dependencies\include\caspin\tamarin\extensions"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB;CSP_USE_RUNTIME_DEBUGGER"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -273,7 +273,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;..\..\..\dependencies\include\caspin;..\..\..\dependencies\include\caspin\tamarin\core;..\..\..\dependencies\include\caspin\tamarin\vmpi;..\..\..\dependencies\include\caspin\tamarin\shell;..\..\..\dependencies\include\caspin\tamarin\platform;..\..\..\dependencies\include\caspin\tamarin\mmgc;..\..\..\dependencies\include\caspin\tamarin\eval;..\..\..\dependencies\include\caspin\tamarin\extensions"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;VTX_STATIC_LIB;CSP_USE_RUNTIME_DEBUGGER"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
